--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>welcome to {{title}}</h1>
+<app-nav-bar></app-nav-bar>
+
+<div class="container" style="margin-top:140px">
+  <h1>welcome to {{title}}</h1>
+
+</div>
+
+
