--- a/client/src/app/nav-bar/nav-bar.component.scss
+++ b/client/src/app/nav-bar/nav-bar.component.scss
@@ -4,7 +4,7 @@
   min-width:25px;
   border-radius:50%;
   font-size:1em;
-  background:#2f2faa;
+  background:#60002a;
   color:white;
   text-align:center;
   top:-12px;
